syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/api/annotations.proto";

message VersionRequest{}

message VersionResponse {
    string buildTime = 1;
    string version = 2;
    string hash = 3;
    string mode = 4;
}

service ChainAPI{
    rpc Version(VersionRequest) returns (VersionResponse){
        option (google.api.http) = {
           post: "/chain/version"
           body: "*"
       };
    }
}


